--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "protobufjs": "^6.9.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "chai": "^4.2.0",
     "eslint": "^9.0.0",
     "gulp": "^4.0.2",
